# cardano-devkit

./: .gitignore  CHANGELOG.md  PRODUCT.md  README.md  components.json  index.html  package-lock.json  package.json  release-please-config.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yaml  task.yaml
.github/workflows/: build.yml  publish-vscode.yml  publish.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: config.rs  logger.rs  main.rs  utils.rs
cli/tests/: main_tests.rs
core/: .gitignore
core/src/: lib.rs  main.rs  start.rs  utils.rs
snippet-extension/: .gitignore  CHANGELOG.md  README.md  package.json
snippet-extension/snippets/: meshsdk-txbuilder.json
snippet-extension/snippets/aiken/: aiken-helloworld.json
snippet-extension/snippets/mesh/: mesh-blueprint-utils.json
snippet-extension/snippets/vodka/: vodka-helloworld.json
snippet-extension/src/: extension.ts
snippet-extension/src/data/: typeMap.ts
system/: Cargo.toml  tauri.conf.json
ui/: App.tsx  index.css  main.tsx  router.tsx
ui/components/: AppSidebar.tsx
ui/components/ui/: sidebar.tsx
ui/constants/: routes.tsx
ui/pages/: Landing.tsx
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/snippets/mesh/: mesh-wallet-hooks.json
vscode-extension/snippets/whiskey/: whiskey-helloworld.json
vscode-extension/src/: extension.ts
vscode-extension/src/data/: typeMap.ts
