[package]
name = "cardano-devkit"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "string"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.1.6"
indicatif = "0.17.8"
console = "0.15.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
fs_extra = "1.3.0"
dirs = "4.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"