[package]
name = "cardano-devkit"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "string"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.1.6"
indicatif = "0.17.8"
console = "0.15.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
fs_extra = "1.3.0"
dirs = "4.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cardano_devkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
